--- a/main.html
+++ b/main.html
@@ -15,16 +15,16 @@
     <form class='form-container'>
 
       <label for='title'>Book Title</label>
-      <input type='text' placeholder="Enter Book Title" name='title' id='submittedTitle' value="value" required>
+      <input type='text' placeholder="Enter Book Title" name='title' id='submittedTitle'  required>
 
       <label for ='author'>Author</label>
-      <input type="text" placeholder="Author of Book" name='author' id='submittedAuthor' value="value" required>
+      <input type="text" placeholder="Author of Book" name='author' id='submittedAuthor'  required>
 
       <label for="pages">Pages</label>
-      <input type="text" placeholder="Number of pages" name="pages" id='submittedPages' value="value" required>
+      <input type="text" placeholder="Number of pages" name="pages" id='submittedPages'  required>
 
       <label for="read">Have You Read This Book?</label>
-      <input type="text" name="read" list='trueorfalse' id='submittedRead' value="value" required>
+      <input type="text" name="read" list='trueorfalse' id='submittedRead' required>
       <datalist id='trueorfalse'>
         <option value="Yes"></option>
         <option value="No"></option>
