Add Book Button Implemented

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
   <link rel='stylesheet' href='style.css'></link>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class='form-popup' id='bookForm'>
@@ -30,8 +30,8 @@
         <option value="No"></option>
       </datalist>
 
-      <button type="submit" class="btn" onclick="submitBook()">Add Book</button>
-      <button type="submit" class="btn cancel" onclick="closeForm()">Close</button>
+      <button type="button" class="btn" onclick="submitBook()">Add Book</button>
+      <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
     </form>
   </div>
   
