Bare Minimum CSS

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
   
   <div class='formbutton'>
-    <button id="open-button" onclick="openForm()">Add Book</button>
+    <button id="open-button" class='formbutton' onclick="openForm()">Add Book</button>
   </div>
 
   <div id='CardContainer'>
